lex-parser/tests/compile_fail/annotation_rejects_session.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/annotation_rejects_session.rs:7:59
  |
7 |     let _annotation = Annotation::new(label, vec![], vec![SessionContent::Session(session)]);
  |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `ContentElement`, found `SessionContent`
